fix: using a better gray for contrast

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 @theme {
 	--color-black: #000000;
 	--color-white: #ffffff;
-	--color-gray: #989898;
+	--color-gray: #757575;
 	--color-velvet: #5C56DF;
 	--color-grapefruit: #EE7674;
 	--color-sunglow: #FFB800;
